<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/categoryGeneral" >

        <ListPreference
            android:defaultValue="km"
            android:entries="@array/units_text"
            android:entryValues="@array/units_values"
            android:key="taxi_driver_distance_units"
            android:summary="@string/prefSummaryUnits"
            android:title="@string/prefUnits" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/categoryMaps" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="taxi_driver_maps_satellite"
            android:summary="@string/prefSummaryMapSatellite"
            android:title="@string/prefMapSatellite" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="taxi_driver_maps_zoom_controls"
            android:summary="@string/prefSummaryMapZoomControl"
            android:title="@string/prefMapZoomControl" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/categoryNotifications" >

        <EditTextPreference
            android:defaultValue="@string/newIncomingRequestTTS"
            android:key="taxi_driver_request_message"
            android:maxLength="60"
            android:summary="@string/prefSummaryNewRequestMessage"
            android:title="@string/prefNewRequestMessage" />

        <Preference
            android:key="button_taxi_driver_request_message"
            android:summary="@string/prefSummaryRemoveCustomMessage"
            android:title="@string/prefRemoveCustomMessage" >
        </Preference>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="taxi_driver_play_destination"
            android:summary="@string/prefSummaryPlayDestination"
            android:title="@string/prefPlayDestination" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="taxi_driver_play_comment"
            android:summary="@string/prefSummaryPlayComment"
            android:title="@string/prefPlayComment" />
    </PreferenceCategory>

</PreferenceScreen>