<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

    <LinearLayout style="@style/form_registration_panel" >

        <TextView
            style="@style/formRegistrationFirstText"
            android:text="@string/fullName" />

        <EditText
            android:id="@+id/fullName"
            style="@style/formRegistrationEditText" />

        <TextView
            style="@style/formRegistrationText"
            android:text="@string/dni" />

        <EditText
            android:id="@+id/dni"
            style="@style/formRegistrationEditText"
            android:inputType="textCapCharacters" />

        <TextView
            style="@style/formRegistrationText"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            style="@style/formRegistrationEditText"
            android:password="true" />

        <TextView
            style="@style/formRegistrationText"
            android:text="@string/password2" />

        <EditText
            android:id="@+id/password2"
            style="@style/formRegistrationEditText"
            android:password="true" />

        <TextView
            style="@style/formRegistrationText"
            android:text="@string/email" />

        <EditText
            android:id="@+id/email"
            style="@style/formRegistrationEditText" />

        <TextView
            style="@style/formRegistrationText"
            android:text="@string/licenceNumber" />

        <EditText
            android:id="@+id/licenceNumber"
            style="@style/formRegistrationEditText" />

        <TextView
            style="@style/formRegistrationText"
            android:text="@string/carBrand" />

        <EditText
            android:id="@+id/carBrand"
            style="@style/formRegistrationEditText" />

        <TextView
            style="@style/formRegistrationText"
            android:text="@string/carModel" />

        <EditText
            android:id="@+id/carModel"
            style="@style/formRegistrationEditText" />

        <Button
            android:id="@+id/buttonRegisterTaxis"
            style="@style/buttonRegistration"
            android:text="@string/buttonRegister" />
    </LinearLayout>

</ScrollView>