<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <TextView
        style="@style/SpinnerText"
        android:text="@string/city" />

    <Spinner
        android:id="@+id/targetCity"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:prompt="@string/spinnerCities" />

    <TextView
        style="@style/SpinnerText"
        android:text="@string/line" />

    <Spinner
        android:id="@+id/targetLine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spinnerLines" />

</LinearLayout>