<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

    <LinearLayout style="@style/form_registration_panel" >

        <TextView
            style="@style/formRegistrationFirstText"
            android:text="@string/fullName" />

        <EditText
            android:id="@+id/fullName"
            style="@style/formRegistrationEditText"
            android:inputType="textCapWords"
            android:maxLength="45" />

        <TextView
            style="@style/formRegistrationText"
            android:text="@string/userID" />

        <EditText
            android:id="@+id/userName"
            style="@style/formRegistrationEditText"
            android:inputType="text"
            android:maxLength="10" />

        <TextView
            style="@style/formRegistrationText"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            style="@style/formRegistrationEditText"
            android:inputType="textPassword"
            android:maxLength="45" />

        <TextView
            style="@style/formRegistrationText"
            android:text="@string/password2" />

        <EditText
            android:id="@+id/password2"
            style="@style/formRegistrationEditText"
            android:inputType="textPassword"
            android:maxLength="45" />

        <TextView
            style="@style/formRegistrationText"
            android:text="@string/email" />

        <EditText
            android:id="@+id/email"
            style="@style/formRegistrationEditText"
            android:inputType="textEmailAddress"
            android:maxLength="45" />

        <Button
            android:id="@+id/buttonRegisterUser"
            style="@style/buttonRegistration"
            android:text="@string/buttonRegister" />
    </LinearLayout>

</ScrollView>