<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

    <LinearLayout style="@style/form_auth_panel" >

        <TextView
            style="@style/formAuthText"
            android:text="@string/dni" />

        <EditText
            android:id="@+id/userID"
            style="@style/formDNIEt"
            android:layout_width="180dp"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/formAuthText"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            style="@style/formPasswordEt" />

        <Button
            android:id="@+id/buttonLogin"
            style="@style/buttonLogin"
            android:text="@string/buttonLogin" />
    </LinearLayout>

</ScrollView>