<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/actionbar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:orientation="vertical" >

        <LinearLayout style="@style/normal_vertical_panel" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="60dp"
                android:contentDescription="@string/cdRoadImage"
                android:src="@drawable/taxi_attending_request" />

            <TextView
                style="@style/MainPanelText"
                android:layout_marginTop="20dp"
                android:text="@string/messageAttendingRequest" />

            <Button
                android:id="@+id/bServiceCompleted"
                style="@style/buttonTaxiDriver"
                android:text="@string/bServiceCompleted" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>