<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/actionbar_with_buttons" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:orientation="vertical" >

        <LinearLayout style="@style/normal_vertical_panel" >

            <TextView
                android:id="@+id/profileName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dip"
                android:gravity="center"
                android:textSize="18dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/cdTaxiImage"
                android:src="@drawable/taxi_main" >
            </ImageView>

            <TextView
                style="@style/MainPanelText"
                android:text="@string/trackingOff" />

            <Button
                android:id="@+id/buttonStart"
                style="@style/buttonTaxiDriver"
                android:text="@string/start" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>