<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/actionbar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/containerBInformationPanel"
            style="@style/normal_vertical_panel" >

            <TextView
                style="@style/PanelText"
                android:text="@string/busDriverStatusMessage" />

            <TextView
                style="@style/ThanksText"
                android:text="@string/thanksLabel" />

            <LinearLayout style="@style/InfoPanel" >

                <View style="@style/InfoLabelLine" />

                <TextView
                    android:id="@+id/collaborationInfoCity"
                    style="@style/InfoText" />

                    <TextView
                        android:id="@+id/collaborationInfoLine"
                        style="@style/InfoText" />

                    <View style="@style/InfoLabelLine" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonFinishCollaboration"
                style="@style/buttonInfoPanel"
                android:text="@string/buttonFinishCollaboration" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>